2024-12-05 [2.5]
* oprava pádu ak sa naživo nevysiela žiaden program

2024-12-03 [2.4]
* oprava funkčnosti po zmenách na strane ČT

2024-09-15 [2.3]
* úprava závislosti doplnku

2024-07-01 [2.2]
* oprava zobrazenia menu podľa začiatočného písmena a podľa žánru

2024-06-06 [2.1]
* oprava prehrávania zvuku ak program obsahuje viac jazykových stôp pri HLS formáte

2024-05-24 [2.0]
* kompletný prepis doplnku, no stále s použitím pôvodného API
* dynamické pridávanie živého vysielania podľa dostupnosti
* problémy API na strane ČT, nie doplnku:
  - niekedy sa stream nespustí na prvý krát a je nutné pokus opakovať
  - u niektorých položiek sa zobrazuje chyba "programme not found"

2024-02-24 [1.7.0]
* added support for playing DRM protected content (exteplayer3 is requiered for DRM streams)

2024-02-12 [1.6.1]
* fixed crash when trying to play DRM protected content

2024-01-27 [1.6.0]
 * added support for virtual profiles in ArchivCZSK >= 2.5.0

2023-01-27 [1.5.1]
 * show error message when video is not playable

2023-01-27 [1.5.0]
 * convert to module for archivCZSK >= 2.0.0

2022-04-04 [1.4.1]
 * some minor fixes

2022-04-04 [1.4.0]
 * make addon python 3.x compatible

2020-07-24 [1.3.10]
 * Next page fix

2019-02-13 [1.3.6]
 * Live channels listing bugfix

2018-08-26 [1.3.5]
 * uprava kvality prehravania

2015-05-02 [1.3.2]
 * Extra ice hockey channels

2015-04-26 [1.3.1]
 * Live channels listing bugfix

2015-04-19 [1.3.0]
 * Main playlist video selection (skiping Rated preroll)
 * RMTP cleanup (not supported any more)
 * Right resolution label for mobile quality
 * Better Helix autounpause fix now set as default

2015-01-22 [1.2.6]
 * Token error detection bugfix by mx3L. Thx

2015-01-10 [1.2.5]
 * Unsupported skin bugfix by Libor Zoubek. Thx

2015-01-04 [1.2.4]
 * Player overridden to unpause on start and seek (experimental)
 * JSON playlist parsing bugfix
 * Available qualities revised (slower but working)

2015-01-03 [1.2.3]
 * Auto view mode default fix
