@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.ivysilani" name="iVysílání - Česká televize" version="2.5">
+<addon id="plugin.video.ivysilani" name="iVysílání - Česká televize" version="2.6">
 	<requires>
 		<import addon="enigma2.archivczsk" version="3.0.0"/>
 		<import addon="tools.archivczsk" version="2.1" />
