@@ -1,3 +1,6 @@
+2024-12-18 [2.6]
+* oprava pádu ak server vracia v odpovedi chybné dáta
+
 2024-12-05 [2.5]
 * oprava pádu ak sa naživo nevysiela žiaden program
 
